--- a/My CV/CV.css
+++ b/My CV/CV.css
@@ -64,27 +64,38 @@ main {
 /*slector de etiqueta*/
 section {
     width: 100%;
+    height: 50%;
     background-color: black;
     position: relative;
     display: block;
+    display: flex;
 }
 a {
     text-decoration: none;
-    color: aliceblue;
+    color: #1364BC;
+    display: flex;
+    justify-content: center;
 }
 /*selector de clase*/
 .picture {
+    width: 20%;
+    margin: 20px;
     text-decoration: none;
     background-color: black;
-    width: 20%;
+    display: flex;
+    justify-content: flex-start;
+    border-radius: 999px;
 }
 
 #name {
     font-size: 60px;
     color: aliceblue;
-    padding: 5%;
+    padding: 2%;
+    margin: 0px;
     font-weight: bold;
-
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 button:hover{
@@ -93,12 +104,24 @@ button:hover{
 
 nav {
   width: 100%;
-  background-color: black;
+  background-color: white;
   padding: 10px;
 
 }
 
 h1 {
-  color: white;
+  color: black;
+  display: flex;
+  justify-content: center;
+}
+h2 {
+  display: flex;
+  justify-content: flex-start;
+  padding-inline-start: 20px;
+  margin: 20px;
+}
+h3 {
+  padding-inline-start: 20px;
+  margin: 20px;
 }
 
